--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".MyApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:allowBackup="true"
+            android:name=".MainActivity"
+            android:supportsRtl="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
+        </activity>
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".TicketResultActivity" />
         <activity
-            android:name=".ScanActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".TicketActivity"
+            android:name=".TicketResultActivity"
             android:label="@string/title_activity_ticket"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ScanActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
